welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: not found: value poseBrosse
		poseBrosse
                ^SlugHunting:7: error: not found: value BaisseBrosse
		BaisseBrosse
                ^